automatic Reload, ip and hostName validation