@@ -2,24 +2,21 @@ package com.checkmk.pdctLifeCycle.Controller;
 
 import com.checkmk.pdctLifeCycle.exception.HostServiceException;
 import com.checkmk.pdctLifeCycle.model.Host;
-import com.checkmk.pdctLifeCycle.model.HostLiveInfo;
 import com.checkmk.pdctLifeCycle.model.HostWithLiveInfo;
 import com.checkmk.pdctLifeCycle.model.LdapUser;
 import com.checkmk.pdctLifeCycle.service.HostImportService;
-import com.checkmk.pdctLifeCycle.service.HostLiveInfoService;
 import com.checkmk.pdctLifeCycle.service.HostService;
 import com.checkmk.pdctLifeCycle.service.LdapUserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.ldap.userdetails.LdapUserDetails;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Controller
 @RequestMapping("/hosts")
@@ -27,58 +24,31 @@ public class HostWebController {
 
     private final HostService hostService;
     private final HostImportService hostImportService;
-    private final HostLiveInfoService hostLiveInfoService;
     private final LdapUserService ldapUserService;
 
     @Autowired
-    public HostWebController(HostService hostService, HostImportService hostImportService, HostLiveInfoService hostLiveInfoService, LdapUserService ldapUserService){
+    public HostWebController(HostService hostService, HostImportService hostImportService, LdapUserService ldapUserService) {
         this.hostService = hostService;
         this.hostImportService = hostImportService;
-        this.hostLiveInfoService = hostLiveInfoService;
         this.ldapUserService = ldapUserService;
     }
 
-
     @GetMapping
-    public String getHostsWithLiveInfo(Model model) throws Exception {
-        List<Host> hosts;
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-
-        if (authentication != null && authentication.isAuthenticated()) {
-            LdapUserDetails userDetails = (LdapUserDetails) authentication.getPrincipal();
-            String username = userDetails.getUsername();
-            boolean isAdmin = authentication.getAuthorities().stream()
-                    .anyMatch(grantedAuthority -> grantedAuthority.getAuthority().equals("ROLE_ADMIN"));
-
-            if (isAdmin) {
-                hosts = hostService.getAllHosts(); // Admin gets all hosts
-            } else {
-                // Non-admin users get only their own hosts, filtering by the LDAP username
-                hosts = hostService.getHostsByUsername(username);
-            }
-        } else {
-            hosts = new ArrayList<>();
-        }
-
-        List<HostWithLiveInfo> combinedHostInfo = hosts.stream().map(host -> {
-            HostWithLiveInfo hostWithLiveInfo = new HostWithLiveInfo();
-            hostWithLiveInfo.setHost(host);
-            try {
-                HostLiveInfo liveInfo = hostLiveInfoService.convertToHostLiveInfo().stream()
-                        .filter(info -> info.getHostName().equals(host.getHostName()))
-                        .findFirst()
-                        .orElse(new HostLiveInfo());
-                hostWithLiveInfo.setLiveInfo(liveInfo);
-            } catch (Exception e) {
-                e.printStackTrace();
-                hostWithLiveInfo.setLiveInfo(new HostLiveInfo());
-            }
-            return hostWithLiveInfo;
-        }).collect(Collectors.toList());
-
-        model.addAttribute("combinedHostInfo", combinedHostInfo);
+    public String getHostsPage(Model model, Authentication authentication) throws Exception {
+        List<String> roles = authentication.getAuthorities()
+                .stream()
+                .map(GrantedAuthority::getAuthority)
+                .toList();
+        model.addAttribute("userRoles", roles);
         model.addAttribute("pageTitle", "Hosts with Live Info");
+        model.addAttribute("userRoles", authentication.getAuthorities());
         return "host/list";
+    }
+
+    @GetMapping("/live-data")
+    @ResponseBody
+    public List<HostWithLiveInfo> getLiveHostData(Authentication authentication) throws Exception {
+        return hostService.getHostsWithLiveInfo(authentication);
     }
 
     @GetMapping("/add")
@@ -104,7 +74,6 @@ public class HostWebController {
         return "host/edit";
     }
 
-
     @PostMapping("/edit/{id}")
     public String updateHost(@PathVariable String id, @RequestParam("user") String userEmail, @ModelAttribute Host host) throws HostServiceException {
         host.setId(id);
@@ -116,7 +85,6 @@ public class HostWebController {
         hostService.updateHost(host);
         return "redirect:/hosts";
     }
-
 
     @GetMapping("/delete/{id}")
     public String deleteHost(@PathVariable String id) throws HostServiceException {
@@ -135,8 +103,20 @@ public class HostWebController {
     }
 
     @PostMapping("/import")
-    public String saveImportedHosts(@RequestParam("selectedHostIds") List<String> selectedHostIds, Model model) {
+    public String saveImportedHosts(@RequestParam("selectedHostIds") List<String> selectedHostIds) {
         hostImportService.saveSelectedHosts(selectedHostIds);
         return "redirect:/hosts/import";
+    }
+
+
+    @GetMapping("/validate-hostname")
+    @ResponseBody
+    public Map<String, Boolean> validateHostName(@RequestParam String hostName) {
+        boolean existsInDatabase = hostService.hostExistsInDatabase(hostName);
+        boolean existsInCheckmk = hostService.hostExistsInCheckmk(hostName);
+
+        Map<String, Boolean> response = new HashMap<>();
+        response.put("exists", existsInDatabase || existsInCheckmk);
+        return response;
     }
 }
